// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aborts request when sending new message while waiting for response 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "First message",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second message while first is pending",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second response that should be shown",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`aborts tool use when sending new message while tool is executing 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Run a slow command",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "I'll run a slow bash command for you.",
        "type": "text",
      },
      {
        "id": "slow-bash-command",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "slow-bash-command",
            "input": {
              "command": "sleep 5 && echo 'This should be aborted'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
    "stopReason": "tool_use",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "id": "slow-bash-command",
        "result": {
          "error": "Request was aborted by the user.",
          "status": "error",
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Cancel that, run something else",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread while streaming by aborting the stream first 1`] = `
[
  {
    "content": [
      {
        "text": "What is 2+2?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "2+2 equals 4.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about 3+3?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "Actually, tell me about 5+5",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread while waiting for tool use by aborting pending tools first 1`] = `
[
  {
    "content": [
      {
        "text": "Read my secret file",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "I'll read your secret file.",
        "type": "text",
      },
      {
        "id": "get-file-tool",
        "input": {
          "filePath": ".secret",
        },
        "name": "get_file",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": "Request was aborted by the user.",
        "is_error": true,
        "tool_use_id": "get-file-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "Do something else instead",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > fork-cloned-messages 1`] = `
[
  {
    "content": [
      {
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > forked-thread-messages 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "system_reminder",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Italy's capital is Rome. It's known for its rich history, art, and cuisine.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`handles @async messages and sends them on end turn 1`] = `
[
  {
    "content": [
      {
        "text": "Tell me about TypeScript",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "TypeScript is a typed superset of JavaScript.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Also tell me about JavaScript",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`handles @async messages by queueing them and sending on next tool response 1`] = `
[
  {
    "content": [
      {
        "text": "Can you read my secret file?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "I'll read your secret file.",
        "type": "text",
      },
      {
        "id": "secret-file-tool",
        "input": {
          "filePath": ".secret",
        },
        "name": "get_file",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "secret secrets are no fun
",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "secret-file-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "This should be queued",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
CRITICAL: When using the edl tool, NEVER use large multi-line heredoc patterns in select/select_one. Large text blocks are fragile and wasteful.
Instead, use line ranges (select 42-58), or select the first line then extend_forward to the last line boundary.
WRONG: select_one with 5+ lines of text in a heredoc
RIGHT: select_one first line, then extend_forward to match the end


CRITICAL: You're really bad at counting lines. Whenever using line or line:col ranges, first use a select to confirm that you're targeting the appropriate place in the code. The tool output will show you what text you're actually going to be operating on. Only once you confirm that you're going to be editing the right location, do the actual edit in a followup operation.
WRONG: select_one 55-57 -> delete in one script
RIGHT: select_one 55-57 in the first script, then confirm the selection in the tool response, then select_one 55-57 -> delete in the second script

CRITICAL: The explore subagent should NEVER be used to read the full contents of a file. It should only extract and report relevant line ranges and descriptions.
WRONG: spawn explore agent to read the full contents of a large file
RIGHT: spawn explore agent to find where X is handled, getting back line ranges and descriptions
CRITICAL: Avoid copying code by writing it out. Instead, use EDL registers or scripts to move code around.
</system-reminder>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`renders successive tool uses with single assistant header and inline metadata > successive-tool-uses-display 1`] = `
"# [ Untitled ]
⚙️ [System Prompt ~2K]

# user:
Read two files for me
📋 [System Reminder]
# assistant:
I'll read the first file.
👀✅ \`poem.txt\` [+ 5]

📋 [System Reminder]
💭 [Thinking]
👀✅ \`poem2.txt\` [+ 5]

📋 [System Reminder]
I've read both files for you.

# context:
- \`poem.txt\`
- \`poem2.txt\`

Stopped (end_turn)  [input: 0, output: 0] "
`;
